unpackaged/main/default/objects/Claim_Information__c/Claim_Information__c.object-meta.xml
<CustomObject>
    <label>Claim Information</label>
    <nameField>
        <displayFormat>Claim-{0000}</displayFormat>
        <label>Claims Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>