unpackaged/main/default/objects/Claim_Information__c/fields/Agent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agent_Notes__c</fullName>
    <description>Agent&#39;s notes on the claim.</description>
    <label>Agent Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>