unpackaged/main/default/objects/Claim_Information__c/fields/Billing_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Address__c</fullName>
    <formula>IF(NOT(ISBLANK(Billing_Provider_Address_Line_1__c)) &amp;&amp; NOT(ISBLANK(Billing_Provider_City__c )) &amp;&amp; NOT(ISBLANK(Billing_Provider_State_Code__c )) &amp;&amp; NOT(ISBLANK(Billing_Provider_Zip_Code__c)), 
(Billing_Provider_Address_Line_1__c &amp; BR() &amp;
Billing_Provider_City__c &amp; &quot;, &quot; &amp;
Billing_Provider_State_Code__c &amp; &quot; &quot; &amp;
Billing_Provider_Zip_Code__c),&#39;&#39;)</formula>
    <label>Billing Provider Address</label>
    <type>Text</type>
</CustomField>