unpackaged/main/default/objects/Claim_Information__c/fields/Billing_Provider_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Address_Line_2__c</fullName>
    <label>Billing Provider Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>