unpackaged/main/default/objects/Claim_Information__c/fields/Billing_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_City__c</fullName>
    <label>Billing Provider City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>