unpackaged/main/default/objects/Claim_Information__c/fields/Billing_Provider_Fax__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Fax__c</fullName>
    <label>Billing Provider Fax</label>
    <type>Phone</type>
</CustomField>