unpackaged/main/default/objects/Claim_Information__c/fields/Billing_Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Last_Name__c</fullName>
    <label>Billing Provider Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>