unpackaged/main/default/objects/Claim_Information__c/fields/Billing_Provider_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_State_Code__c</fullName>
    <label>Billing Provider State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>