unpackaged/main/default/objects/Claim_Information__c/fields/Claim_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Adjustment_Amount__c</fullName>
    <label>Claim Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>