unpackaged/main/default/objects/Claim_Information__c/fields/Claim_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Code__c</fullName>
    <label>Claim Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>