unpackaged/main/default/objects/Claim_Information__c/fields/Claim_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Claim_Line_Value__c</fullName>
    <description>Decimal value of the Claim Line</description>
    <formula>VALUE( Claim_Line__c )</formula>
    <label>Claim Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>