unpackaged/main/default/objects/Claim_Information__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <label>Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>