unpackaged/main/default/objects/Claim_Information__c/fields/Claim_Segment__c.field-meta.xml
<CustomField>
    <fullName>Claim_Segment__c</fullName>
    <label>Claim Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>