unpackaged/main/default/objects/Claim_Information__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <formula>CASE( Claim_Code__c ,
&#39;O&#39;, &#39;Original&#39;,
&#39;A&#39;, &#39;Adjustment&#39;,
&#39;R&#39;, &#39;Rework&#39;,
&#39;J&#39;, &#39;Reject&#39;,
&#39;V&#39;, &#39;Void&#39;,
&#39;C&#39;, &#39;Closeout&#39;,
&#39;&#39;
)</formula>
    <label>Claim Status</label>
    <type>Text</type>
</CustomField>