unpackaged/main/default/objects/Claim_Information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Claims Information</relationshipLabel>
    <relationshipName>Claims_Information</relationshipName>
    <type>Lookup</type>
</CustomField>