unpackaged/main/default/objects/Claim_Information__c/fields/Contact_Drug__c.field-meta.xml
<CustomField>
    <fullName>Contact_Drug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Drug</label>
    <referenceTo>Contact_Drug__c</referenceTo>
    <relationshipLabel>Claims Information</relationshipLabel>
    <relationshipName>Claims_Information</relationshipName>
    <type>Lookup</type>
</CustomField>