unpackaged/main/default/objects/Claim_Information__c/fields/Copay_Card_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Copay_Card_Amount_Billed__c</fullName>
    <formula>Contact_Drug__r.Related_Case__r.Copay_Card_Amount_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copay Card Amount Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>