unpackaged/main/default/objects/Claim_Information__c/fields/Coverage_Code_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code_Indicator__c</fullName>
    <inlineHelpText>01 and 02 is Out of Network/Not Eligible for PRx and 03 and 04 are In Network/Eligible for PRx.</inlineHelpText>
    <label>Coverage Code Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>