unpackaged/main/default/objects/Claim_Information__c/fields/Coverage_Code_Indicator_Translation__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code_Indicator_Translation__c</fullName>
    <formula>CASE( Coverage_Code_Indicator__c ,
&quot;N&quot;, &quot;Non-preferred/ Out-of-network&quot;,
&quot;P&quot;, &quot;Preferred/In-Network&quot;,
&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Code Indicator Translation</label>
    <type>Text</type>
</CustomField>