unpackaged/main/default/objects/Claim_Information__c/fields/CPA_Funds_Paid__c.field-meta.xml
<CustomField>
    <fullName>CPA_Funds_Paid__c</fullName>
    <label>CPA Funds Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>