unpackaged/main/default/objects/Claim_Information__c/fields/CPA_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CPA_Indicator__c</fullName>
    <label>CPA Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-in - Paid in full</fullName>
            </value>
            <value>
                <fullName>Opt-in - Partial payment</fullName>
            </value>
            <value>
                <fullName>Opt-in - Funds exhausted</fullName>
            </value>
            <value>
                <fullName>Opt-in - CPA not available</fullName>
            </value>
            <value>
                <fullName>Opt-in - Reimbursement not Confirmed</fullName>
            </value>
            <value>
                <fullName>Opt-out - Refused</fullName>
            </value>
            <value>
                <fullName>Opt-out - Member not Enrolled</fullName>
            </value>
            <value>
                <fullName>Opt-In: CPA Available</fullName>
                <isActive>false</isActive>
                <label>Opt-In: CPA Available</label>
            </value>
            <value>
                <fullName>Opt-Out: MBR Refused</fullName>
                <isActive>false</isActive>
                <label>Opt-Out: MBR Refused</label>
            </value>
            <value>
                <fullName>Opt-Out: MBR UTC</fullName>
                <isActive>false</isActive>
                <label>Opt-Out: MBR UTC</label>
            </value>
            <value>
                <fullName>Opt-out - CPA not confirmed</fullName>
                <isActive>false</isActive>
                <label>Opt-out - CPA not confirmed</label>
            </value>
            <value>
                <fullName>Opt-out - Reimbursement not Confirmed</fullName>
                <isActive>false</isActive>
                <label>Opt-out - Reimbursement not Confirmed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>