unpackaged/main/default/objects/Claim_Information__c/fields/CPA_Indicator_Code__c.field-meta.xml
<CustomField>
    <fullName>CPA_Indicator_Code__c</fullName>
    <formula>CASE( CPA_Indicator__c,
&#39;Opt-in - Paid in full&#39;, &#39;F&#39;,
&#39;Opt-in - Partial payment&#39;, &#39;P&#39;,
&#39;Opt-in - Funds exhausted&#39;, &#39;E&#39;,
&#39;Opt-in - CPA not available&#39;, &#39;N&#39;,
&#39;Opt-out - Refused&#39;, &#39;R&#39;,
&#39;Opt-out - Member not Enrolled&#39;, &#39;M&#39;,
&#39;Opt-in - Reimbursement not Confirmed&#39;, &#39;C&#39;,
&#39;&#39;
)</formula>
    <label>CPA Indicator Code</label>
    <type>Text</type>
</CustomField>