unpackaged/main/default/objects/Claim_Information__c/fields/CPA_Indicator_Is_Opt_Out_Status__c.field-meta.xml
<CustomField>
    <fullName>CPA_Indicator_Is_Opt_Out_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPA Indicator Is Opt-Out Status</label>
    <type>Checkbox</type>
</CustomField>