unpackaged/main/default/objects/Claim_Information__c/fields/CSA_Control__c.field-meta.xml
<CustomField>
    <fullName>CSA_Control__c</fullName>
    <description>A subdivision of a purchaser.  These subdivisions are designated by the purchaser and Aetna for reporting, administrative, and accounting needs
(specifically to summarize/combine suffixes).  A CONTROL will always be associated with at least one SUFFIX.  A CONTROL will always be associated with one and only one purchaser.</description>
    <label>CSA Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>