unpackaged/main/default/objects/Claim_Information__c/fields/Current_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Claim_Number__c</fullName>
    <description>Current Claim Number Key for Claim ID, Claim Segment, Claim Line, &amp; Previous Segment on the claim.</description>
    <label>Current Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>