unpackaged/main/default/objects/Claim_Information__c/fields/Date_Of_Service_To__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Service_To__c</fullName>
    <label>Date Of Service To</label>
    <type>Date</type>
</CustomField>