unpackaged/main/default/objects/Claim_Information__c/fields/Direct_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Number__c</fullName>
    <inlineHelpText>Service Facility Contact&#39;s direct number and extention if applicable</inlineHelpText>
    <label>Direct Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>