unpackaged/main/default/objects/Claim_Information__c/fields/Drug_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Brand_Name__c</fullName>
    <formula>Drug__r.Drug_Brand_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug Brand Name</label>
    <type>Text</type>
</CustomField>