unpackaged/main/default/objects/Claim_Information__c/fields/Drug_Cost_Paid_by_Primary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Drug_Cost_Paid_by_Primary_Insurance__c</fullName>
    <label>Drug Cost Paid by Primary Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>