unpackaged/main/default/objects/Claim_Information__c/fields/Drug_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Label_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Drug__r.Id, Drug__r.Name,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug Label Name</label>
    <type>Text</type>
</CustomField>