unpackaged/main/default/objects/Claim_Information__c/fields/Is_there_another_Health_Benefit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_there_another_Health_Benefit_Plan__c</fullName>
    <formula>TEXT( Contact_Drug__r.Contact__r.Is_there_a_Secondary_Insurance_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does the patient have medical benefits and/or pharmacy benefits through any private or government health insurer/payer/program? Y/N</inlineHelpText>
    <label>Is there a Secondary Insurance Plan?</label>
    <type>Text</type>
</CustomField>