unpackaged/main/default/objects/Claim_Information__c/fields/NDC__c.field-meta.xml
<CustomField>
    <fullName>NDC__c</fullName>
    <inlineHelpText>NDC may not always be provided</inlineHelpText>
    <label>NDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>