unpackaged/main/default/objects/Claim_Information__c/fields/Patient_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birth_Date__c</fullName>
    <description>Patient Birth Date</description>
    <formula>Contact__r.Patient_Birth_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Birth Date</label>
    <type>Date</type>
</CustomField>