unpackaged/main/default/objects/Claim_Information__c/fields/Patient_Pay_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Patient_Pay_Total_Amount__c</fullName>
    <label>Patient Pay Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>