unpackaged/main/default/objects/Claim_Information__c/fields/Place_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service__c</fullName>
    <label>Place of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>