unpackaged/main/default/objects/Claim_Information__c/fields/Plan_Sponsor_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Unique_ID__c</fullName>
    <formula>Contact__r.Plan_Sponsor_Unique_ID__c</formula>
    <label>Plan Sponsor Unique ID</label>
    <type>Text</type>
</CustomField>