unpackaged/main/default/objects/Claim_Information__c/fields/Preferred_Provider__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Provider__c</fullName>
    <label>Preferred Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>