unpackaged/main/default/objects/Claim_Information__c/fields/Prior_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization__c</fullName>
    <label>Prior Authorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>