unpackaged/main/default/objects/Claim_Information__c/fields/Send_to_ACAS__c.field-meta.xml
<CustomField>
    <fullName>Send_to_ACAS__c</fullName>
    <description>As a Claims processor, we need the ability to send claims back to Aetna (ACAS) after they have been worked in SF. This will allow ACAS to adjust the claim appropriately.</description>
    <label>Send to ACAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Requeued</fullName>
            </value>
            <value>
                <fullName>Re-sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>