unpackaged/main/default/objects/Claim_Information__c/fields/Sent_to_ACAS__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_ACAS__c</fullName>
    <description>Connected to Jitterbit. Date Claim is sent to Jitterbit.</description>
    <label>Sent to ACAS</label>
    <type>Date</type>
</CustomField>