unpackaged/main/default/objects/Claim_Information__c/fields/Service_Facility_Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_Alternative_Phone__c</fullName>
    <label>Service Facility Alternative Phone</label>
    <type>Phone</type>
</CustomField>