unpackaged/main/default/objects/Claim_Information__c/fields/Service_Facility_Contact__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_Contact__c</fullName>
    <label>Service Facility Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>