unpackaged/main/default/objects/Claim_Information__c/fields/Service_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Address__c</fullName>
    <formula>IF(NOT(ISBLANK(Service_Provider_Address_Line_1__c)) &amp;&amp; NOT(ISBLANK(Service_Provider_City__c)) &amp;&amp; NOT(ISBLANK(Service_Provider_State__c)) &amp;&amp; NOT(ISBLANK(Service_Provider_Zip__c)),
(Service_Provider_Address_Line_1__c &amp; BR() &amp;
Service_Provider_City__c &amp; &quot;, &quot; &amp;
Service_Provider_State__c &amp; &quot; &quot; &amp;
Service_Provider_Zip__c),&#39;&#39;)</formula>
    <label>Service Provider Address</label>
    <type>Text</type>
</CustomField>