unpackaged/main/default/objects/Claim_Information__c/fields/Service_Provider_Fax__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Fax__c</fullName>
    <label>Service Provider Fax</label>
    <type>Phone</type>
</CustomField>