unpackaged/main/default/objects/Claim_Information__c/fields/Service_Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Last_Name__c</fullName>
    <label>Service Provider Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>