unpackaged/main/default/objects/Claim_Information__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <formula>IF(isBlank(Service_Provider_First_Name__c) &amp;&amp; isBlank(Service_Provider_Last_Name__c), Service_Provider_Practice__c, 
Service_Provider_First_Name__c + &#39; &#39; + Service_Provider_Last_Name__c)</formula>
    <label>Service Provider Name</label>
    <type>Text</type>
</CustomField>