unpackaged/main/default/objects/Claim_Information__c/fields/Service_Provider_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Specialty__c</fullName>
    <formula>&#39;TBD&#39;</formula>
    <label>Service Provider Specialty</label>
    <type>Text</type>
</CustomField>