unpackaged/main/default/objects/Claim_Information__c/fields/Source_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Type__c</fullName>
    <label>Source File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>