unpackaged/main/default/objects/Claim_Information__c/fields/Total_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Total_Coinsurance__c</fullName>
    <label>MOOP Accumulator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>