unpackaged/main/default/objects/Claim_Information__c/fields/Total_Days_Supply__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Supply__c</fullName>
    <label>Total Days Supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>