unpackaged/main/default/objects/Claim_Information__c/fields/Total_Dispensed_Units_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Dispensed_Units_Quantity__c</fullName>
    <label>Total Dispensed Units Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>