unpackaged/main/default/objects/Claim_Information__c/fields/Units_Billed__c.field-meta.xml
<CustomField>
    <fullName>Units_Billed__c</fullName>
    <label>Units Billed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>