unpackaged/main/default/objects/Claim_Information__c/validationRules/CPA_Indicator_is_True.validationRule-meta.xml
<ValidationRule>
    <fullName>CPA_Indicator_is_True</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &#39;System Administrator Full&#39;,
CPA_Indicator_Is_Opt_Out_Status__c  = TRUE)</errorConditionFormula>
    <errorDisplayField>CPA_Funds_Paid__c</errorDisplayField>
    <errorMessage>CPA Indicator for this member is in an Opt-out status. So you cannot enter a                   CPA Funds Paid amount</errorMessage>
</ValidationRule>